src/css/grabpress.css
/* ... */
.grabpress-table input[type="text"]:focus{  background: url("images/ui-bg_glass_65_ffffff_1x400.png") repeat-x scroll 50% 50% #FFFFFF; border: 1px solid #FBD850; color: #D54E21; font-weight: bold; }
/*.grabpress-table input#btn-create-feed{ background: url("../images/button-grad.png") repeat-x scroll left top #21759B; border-color: #298CBA; color: #FFFFFF; font-weight: bold; height: 20px; text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.3);  float: right;}*/.grabpress-table input.btn-delete{line-height:auto; background:none; border:none; color: #000; cursor: pointer; }
/*.grabpress-table input#btn-preview-feed{ background: url("../images/white-grad.png") repeat-x scroll left top #F2F2F2; border-color: #BBBBBB; color: #464646; height: 20px; text-shadow: 0 1px 0 #FFFFFF; float: right; }*/.grabpress-table input#publish-check{ height: 13px; margin-left: 0px; }
.grabpress-table input#btn-preview-feed{ margin-left: 30px; }
.grabpress-table input.click-to-play-feed{ margin-left: 3px; }
.hide{ display: none;}
.author-select{ width: 225px; }
.grabpress-table input[type="checkbox"]{ vertical-align: baseline !important; }
.grabpress-table #channel-select, .grabpress-table .channel-select{ width: 230px !important; }
.grabpress-table .ui-widget { font-family: 'Trebuchet MS',Tahoma,Verdana,Arial,sans-serif; font-size: 12px; }

.template-form{
    width:400px;
    float:left;
}
.template-preview{        
    border: 1px solid black;
    float:left;       
    margin: 9px 0 0 20px;
    padding: 0;
    text-align: center; 
}
.template-preview .widescreen{
    border-left: 2px dotted red;
    border-right: 2px dotted red;
    display: block;
    margin-left: 70px;
    position: absolute;
}
.template-preview .standard{
    border-top: 2px dotted blue;
    border-bottom: 2px dotted blue;
    display: block;
    margin-top: 40px;
}
.result-tile:hover {
cursor: pointer;
}



.tooltip{     
    background-color: #F5F5B5;
    border: 1px solid #DECA7E;
    color: #303030;
    font-family: sans-serif;
    font-size: 12px;
    line-height: 18px;
    padding: 10px 13px;
    position: absolute;
    text-align: left;
    z-index: 2;
    text-decoration: none;
    width: 500px;
} 
.grabpress-table .ui-multiselect{
    *height: 28px;
}
.grabpress-table #schedule-select-button .ui-selectmenu-status {
    width: 52px;
}
.ui-multiselect-filter {
    float: none;
}

/* Preview Feed */
.tile-left {
    float: left;
    width: 130px;
}
.tile-left p{
    margin: 0;
    line-height: 12px;
    font-size: 10px;
}
.result-tile {
    float: left;
    width: 400px;
    padding: 10px;
    overflow: hidden;
    border-top: 1px solid black;
}
.tile-right {
    float: right;
    /*height: 110px;*/
    width: 250px;
    overflow: hidden;
}
fieldset.edit-mode{
	border-color: #c41500;
}
h2.video_title {
    font-size: 14px;
    font-weight: bold;
    line-height: 14px;
    padding: 0;
}
p#edit-notice{
	font-size: 14px;
	color: #c41500;
	text-align: center;
	font-style: italic;
	margin: 12px 10px 10px 10px;
}
#close-preview {
    float: right;
    margin-top: -8px;
}
fieldset {
    padding: 10px;
    border: 1px solid black;
}
#preview-feed {
    width: 850px;
}
legend {
    font-size: 16px;
}
.preview-text {
	display: block;
}
#account-chooser {
	margin-bottom: 10px;
}
#account-chooser td {
	font-size: 14px;
}
#account-chooser input {
	margin: 0 5px 5px 10px;
	
}
.account-help {
	font-size: 10px;
}

input[ type="button" ]/*, #account input[ type="checkbox"], select*/{
	/*margin: 0 5px;*/
	display: inline;
	float: right;
}
#link-existing input[type='text'], #link-existing input[type='password']{
	width:250px;
	float: right;
}
.grabpress-table input[ type="button" ]{
	float: right;
}

#link-existing td, #create-account td, #unlink td {
	width: 400px;
	height: 16px;
}
td * {
	vertical-align: bottom;
}
#account {
	width: 400px;
}
#account.create {
	width: 650px;
}
#account.create td{
padding-right: 10px;
} 
#account.create input[type='text'], #account.create input[type='password']{
	width: 346px;
}
#buttons, #tos {
	text-align: right;
	padding: 5px 0;
}
#acknowledge input {
	float: none;
}
span.warning {
	font-weight: bold;
	color: #880000;
}
.manage-table *{
	font-size: 10px;
	
}
.manage-table  {
    border-collapse: collapse;
}
.manage-table th {
    text-align: left;
    vertical-align: bottom;
    padding: 3px 3px 5px 3px;
}

.manage-table .inactive-row td{background-color: #DCDCDC;}
.manage-table .row-feed td{
    background-color: #FFE4C4;
    padding: 3px 3px 5px 3px;
}
.manage-table .row-feed{
   border-top: 3px solid white;
   border-bottom: 3px solid white;
}
.manage-table td:first-child{
	padding-left: 10px;
    border-top-left-radius: 7px;
    border-bottom-left-radius: 7px;
}
.manage-table td:last-child{
	padding-right: 10px;
    border-top-right-radius: 7px;
    border-bottom-right-radius: 7px;
}
#id_agree{
	float:left;
	font-size: 20px;
}
#id_protocol{
	float:right;
}
.display-element{ display: block !important;}
.edit-form-text{
    text-align:center;
    color:#c41500;
    padding:15px 0 10px 0;
    font-style: italic;
    font-size: 14px;
}
#required{
	float:left;
}
#id_tos{
	text-align: right;
	font-size: 10px;
}
#cancel-editing{
	font-size: 12px;
    float: right;
}
#reset-form{
    float: right;
    margin: 0 15px 0 10px;
}
#acknowledge #confirm{
	margin-left: 10px;
}
.hide-button{ display: none !important;}
.manage-table .editing-feed td{
	background-color: #c41500 !important;
	color: white !important
}
.grabpress-table .preview-btn-text{ float: right; }
.grabpress-table .asterisk{ font-size: 16px; }
.grabpress-table th{ width: 130px }
#create-form,
.edit-form-text,
#manage-table {
	width: 850px;
}

td.button-tip{ padding-left: 160px; height: 27px; /*text-align: center;*/ }
#btn-create-feed {
float: right;
}
#buttons {
line-height: 24px;
}
.button-tip span.description{
    float: center;  
}
#message{ /* position: relative; top: 150px; left: 0px;*/ }
#form-catalog-page .preview-text-catalog { /*display: block;*/ }
/* ... */

